--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^5.16.0",
+    "astro-compress": "^2.3.8",
     "clsx": "^2.1.0",
     "fuse.js": "^7.0.0",
     "sharp": "^0.33.2",
